// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton snapshot test suite should render not selected 1`] = `
<View
  selected={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#5E5E5E",
        "borderRadius": 12,
        "borderWidth": 1,
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
/>
`;

exports[`RadioButton snapshot test suite should render without bug 1`] = `
<View
  selected={true}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#0421B1",
        "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 1,
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
/>
`;
